--- a/Experiment_1.ipynb
+++ b/Experiment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMvlke2B3N1RhcESLqS4Iz",
+      "authorship_tag": "ABX9TyN026klRszOEm5jxI+wMYtb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
     {
       "cell_type": "code",
       "source": [
-        "a = 5\n",
+        "a = 5; a = \"HELLO\"\n",
         "print(a)"
       ],
       "metadata": {
@@ -83,15 +83,119 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nTOf9CiIZlPF",
-        "outputId": "f19b36cb-1934-429d-893d-63b5ae231729"
+        "outputId": "1eef6249-abce-4d8a-9229-da95277d4d17"
       },
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5\n"
+            "HELLO\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 5\n",
+        "square = num ** 2\n",
+        "print(f\"The square of {num} is {square}\") # Output: 25\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G9OdWpS8csa4",
+        "outputId": "b0b9d392-1ba2-4e69-9ed5-c0d186ae0fb9"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The square of 5 is 25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 5\n",
+        "square = num * num\n",
+        "print(f\"The square of {num} is {square}\") # Output: 25\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RZzIr2wMdBBm",
+        "outputId": "7209d49b-1f5b-4a34-94be-2ead75cba318"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The square of 5 is 25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 5\n",
+        "square = pow(num, 2)\n",
+        "print(f\"The square of {num} is {square}\") # Output: 25\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tYUItZdcdBTe",
+        "outputId": "bf224d77-dda4-4164-b1de-4995f1399b69"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The square of 5 is 25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get input from user\n",
+        "num = float(input(\"Enter a number: \"))\n",
+        "# Calculate square\n",
+        "square = num ** 2\n",
+        "# Display result\n",
+        "print(f\"The square of {num} is {square}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iB6HwHPBdIr2",
+        "outputId": "6eb21621-cd9a-4844-acba-d8af2ff89906"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 6\n",
+            "The square of 6.0 is 36.0\n"
           ]
         }
       ]
